--- a/2017-07-19/yue-shu-qiang.html
+++ b/2017-07-19/yue-shu-qiang.html
@@ -7,6 +7,15 @@
     <link href="https://cdn.bootcss.com/video.js/6.0.1/alt/video-js-cdn.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/video.js/6.0.1/alt/video.novtt.min.js"></script>
     <script src="https://cdn.bootcss.com/videojs-contrib-hls/5.5.3/videojs-contrib-hls.min.js"></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?e765fda6e056c0e83e4b7f2e6d4acf6a";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
     <style>
         .bx-controls {
             display: none;
